# daily-cli

./: .gitignore  README.md  backup_daily-journal.sqlite  daily-journal.sqlite  pyproject.toml
src/daily/: __init__.py
src/daily/databases/: sqlite.py  sqlite_database.py
src/daily/habits/db/: abstract_db.py
src/daily/journal/: entry.py  journal.py
src/daily/journal/db/: abstract_db.py  sqlite_db.py
src/daily_cli/: env.py  main.py  util.py
src/daily_cli/cli/: cli_plugin.py  daily_cli.py
src/daily_cli/cli/habits/: __init__.py  habits_cli.py
src/daily_cli/cli/habits/commands/: new.py
src/daily_cli/cli/journal/: __init__.py  journal_cli.py
src/daily_cli/cli/journal/commands/: add.py  delete.py  edit.py  print_entries.py  view.py
src/daily_cli/cli/journal/mixins/: __init__.py  add.py  delete.py  edit.py  print_entries.py  view.py
src/daily_cli/daily/journal/: db.py
src/daily_journal_cli/: __init__.py  cli.py  cli_storm.py  db.py  main.py  util.py
src/daily_journal_cli/cli/: cli_plugin.py  daily_cli.py
src/daily_journal_cli/cli/journal/: journal_cli.py
src/daily_journal_cli/cli/journal/subcommands/: __init__.py  add.py  delete.py  edit.py  print_entries.py  view.py
src/daily_journal_cli/daily/journal/: journal.py  sqlite_db.py
src/daily_journal_cli/journal/: __init__.py  add.py  delete.py  edit.py  journal.py  view.py
