[tool.poetry]
name = "daily-journal-cli"
version = "0.1.0"
description = ""
authors = ["Nick Roberts <nickroberts404@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.scripts]
daily = "daily_journal_cli.main:run"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
